@@ -1,4 +1,5 @@
 {{$NEXT}}
+  - Implement history method used for Minion admin plugin history graph.
 
 4.000     2018-04-16 14:58:35 EDT
   - Minion requirement bumped to 9.0.
